--- a/user-web-application.properties
+++ b/user-web-application.properties
@@ -4,7 +4,7 @@ server.port= 8071
 #注册中心地址
 eureka.client.service-url.defaultZone= http://47.97.204.227:7001/eureka/
 #服务在注册中心的别名
-eureka.instance.instance-id= edusystem-user
+eureka.instance.instance-id= edusystem-user-web
 ##访问路径可以显示ip地址
 eureka.instance.prefer-ip-address= true
 
