--- a/user-web-application.properties
+++ b/user-web-application.properties
@@ -1,5 +1,7 @@
 server.port= 8071
 
+spring.application.name= consumer-user
+
 #eureka配置
 #注册中心地址
 eureka.client.service-url.defaultZone= http://47.97.204.227:7001/eureka/
