--- a/user-web-application.properties
+++ b/user-web-application.properties
@@ -1,14 +1,9 @@
 server.port= 8071
 
-spring.application.name= consumer-user
-
-#eureka配置
-#注册中心地址
-eureka.client.service-url.defaultZone= http://47.97.204.227:7001/eureka/
-#服务在注册中心的别名
-eureka.instance.instance-id= edusystem-user-web
-##访问路径可以显示ip地址
-eureka.instance.prefer-ip-address= true
+#false表示不向注册中心注册自己
+eureka.client.register-with-eureka= false
+#设置与Eureka Service交互的地址查询服务和注册服务
+eureka.client.serviceUrl.defaultZone= http://47.97.204.227:7001/eureka/
 
 feign.hystrix.enabled= true
 
